@@ -918,8 +918,11 @@ void DBupdate_host_availability(zbx_uint64_t hostid,int available,int clock, cha
 
 int	DBupdate_item_status_to_notsupported(zbx_uint64_t itemid, char *error)
 {
-	char	error_esc[MAX_STRING_LEN];
-	int	now;
+	char		error_esc[MAX_STRING_LEN];
+	int		now;
+	DB_RESULT	result;
+	DB_ROW		row;
+	DB_TRIGGER	trigger;
 
 	zabbix_log(LOG_LEVEL_DEBUG,"In DBupdate_item_status_to_notsupported()");
 
@@ -940,6 +943,31 @@ int	DBupdate_item_status_to_notsupported(zbx_uint64_t itemid, char *error)
 		CONFIG_REFRESH_UNSUPPORTED+now,
 		error_esc,
 		itemid);
+
+	result = DBselect("select t.triggerid,t.expression,t.description,t.url,t.comments,t.status,t.value,t.priority"
+			" from triggers t,functions f,items i"
+			" where t.triggerid=f.triggerid"
+				" and f.itemid=i.itemid"
+				" and t.status in (%d)"
+				" and t.value not in (%d)"
+				" and i.itemid=" ZBX_FS_UI64,
+		TRIGGER_STATUS_ENABLED,
+		TRIGGER_VALUE_UNKNOWN,
+		itemid);
+
+	while (NULL != (row = DBfetch(result)))
+	{
+		trigger.triggerid 	= zbx_atoui64(row[0]);
+		strscpy(trigger.expression, row[1]);
+		strscpy(trigger.description, row[2]);
+		trigger.url		= row[3];
+		trigger.comments	= row[4];
+		trigger.status		= atoi(row[5]);
+		trigger.value		= atoi(row[6]);
+		trigger.priority	= atoi(row[7]);
+
+		DBupdate_trigger_value(&trigger, TRIGGER_VALUE_UNKNOWN, now, error);
+	}
 
 	return SUCCEED;
 }
